# Aegis-C2

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/internal/aegis-shell/: Cargo.toml
server/internal/aegis-shell/src/: main.rs
server/internal/argus-shell/: Cargo.toml
server/src/: lib.rs  main.rs
